[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Axel Chauvet <chauvetaxel@free.fr>"]
readme = "README.md"
packages = [{"include" = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
